syntax="proto3";

package user;

option go_package="user-service/api";

service UserService {
    rpc Register(RegisterReq) returns (RegisterResp) {}
    rpc Login(LoginReq) returns (LoginResp) {}
    rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp) {}
}

message RegisterReq {
    string email = 1;
    string password = 2;
    string confirm_password = 3;
}

message RegisterResp {
    int32 user_id = 1;
}

message LoginReq {
    string email= 1;
    string password = 2;
}

message LoginResp {
    int32 user_id = 1;
    string token = 2;
}

message GetUserInfoReq {
    int32 user_id = 1;
}

message GetUserInfoResp {
    int32 user_id = 1;
    string email = 2;
    string created_at = 3;
}